--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "uuid": "^3.3.2"
   }
 }
